<resources>
    <string name="app_name" translatable="false">Apollo</string>
    <string name="passDigits" translatable="false">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="tips_exit">再次点击退出</string>
    <string name="t_transfer">转账</string>
    <string name="t_receive">收款</string>
    <string name="t_trans_record">交易记录</string>
    <string name="t_collect_money">收款</string>
    <string name="wallet_address">钱包地址</string>
    <string name="t_copy">复制</string>
    <string name="tip_scan">扫描二维码，转账</string>
    <string name="str_qr_error">解析失败</string>
    <string name="t_copied">已复制</string>
    <string name="t_state_finish">已完成</string>
    <string name="t_sender">发送方</string>
    <string name="t_reveiver">收款方</string>
    <string name="t_trade_type">交易类型</string>
    <string name="t_trade_hash">交易Hash</string>
    <string name="t_hash_detail">Hash详情</string>
    <string name="t_check">查看</string>
    <string name="t_trans_detail">交易详情</string>
    <string name="trans_date">交易时间</string>
    <string name="t_expiration">过期时间</string>
    <string name="state">状态</string>
    <string name="t_solved">已执行</string>
    <string name="t_irreversible">不可逆</string>
    <string name="t_remark">备注</string>
    <string name="t_block_height">所在区块</string>
    <string name="t_address_list">地址簿</string>
    <string name="t_choose_identity">选择身份</string>
    <string name="t_id">身份</string>
    <string name="tip1">转入交易所，请填写相应的标签</string>
    <string name="sure_trans">确认转账</string>
    <string name="insert_account">导入账号</string>
    <string name="create_address">创建地址</string>
    <string name="tip2">备份提示：由于区块链的去中心化特性，地址一旦丢失将无法找回。创建地址后请根据下页的提示妥善备份，以防账号丢失带来的损失</string>
    <string name="tip3">输入密码</string>
    <string name="t_your_address">您的地址是</string>
    <string name="t_your_pk">您的私钥是</string>
    <string name="tip4">确认没有被人窥视或拍照</string>
    <string name="tip5">打开右侧按钮查看您的私钥</string>
    <string name="tip6">备份提示</string>
    <string name="tup6">由于区块链的去中心化特性，地址及私钥一旦丢失将无法找回,建议您将地址及私钥用纸抄写下来，并放在安全且不会被遗忘的地方。\n你可以通过复制私钥的方式进行备份，但将私钥存储在电子设备中可能会带来额外的危险，如数据丢失、数据被盗等。</string>
    <string name="tip7">我已备份，进入钱包</string>
    <string name="save_account">备份账户</string>
    <string name="error_pwd">密码不正确</string>
    <string name="tip8">请输入1-12位字符，小写字母a~z，数字1~5</string>
    <string name="start_import">开始导入</string>
    <string name="t_import_account">导入账号</string>
    <string name="t_card_name">卡片名称</string>
    <string name="export_phrase">导出助记词</string>
    <string name="export_pk">导出私钥</string>
    <string name="export_key">导出Keystore</string>
    <string name="delete_account">删除账号</string>
    <string name="t_manage">管理</string>
    <string name="card_name">卡片名称</string>
    <string name="t_finish">完成</string>
    <string name="t_address">地址</string>
    <string name="t_create_new_card">创建全新卡片</string>
    <string name="eth_import_way">导入助记词/私钥/Keystore</string>
    <string name="tip9">以何种方式添加卡片</string>
    <string name="tip10">Apollo随机挑选12个英文单词作为助记词，创建ETH卡片</string>
    <string name="tip11">导入助记词/私钥/Keystore，在Apollo中方便安全地管理ETH、ERC20和ERC721资产</string>
    <string name="t_start_backup">开始备份</string>
    <string name="t_backup_no">暂不备份</string>
    <string name="next">下一步</string>
    <string name="tip12">请按顺序抄写下来并存放至安全的地方</string>
    <string name="tip13">.妥善保管助记词至隔离网络的安全地方</string>
    <string name="tip14">.请勿将助记词在联网环境下分享和存储，比如邮件、相册、社交应该等</string>
    <string name="t_back_up_phrase">备份助记词</string>
    <string name="tip15">请按顺序点击助记词，以确认助记词抄写正确</string>
    <string name="t_confirm_phrase">确认助记词</string>
    <string name="t_create_w">创建钱包</string>
    <string name="tip16">创建成功</string>
    <string name="tip17">选择导入方式</string>
    <string name="t_phrase">助记词</string>
    <string name="tip18">ETH私钥通常是64位的字符串</string>
    <string name="tip19">助记词通常为12-24个字或词,以空格隔开</string>
    <string name="tip20">Keystore JSON格式一般为｛....｝</string>
    <string name="tip21">请输入Keystore密码</string>
    <string name="tip22">导入Keystore需要验证Keystore密码，导入至Apollo后，该钱包中将使用PIN码进行验证操作</string>
    <string name="tip23">导入私钥</string>
    <string name="tip24">导入助记词</string>
    <string name="tip25">导入Keystore</string>
    <string name="tip26">请输入私钥</string>
    <string name="tip27">请输入助记词</string>
    <string name="tip28">请输入Keystore</string>
    <string name="t_assest_manage">资产管理</string>
    <string name="t_more_token">更多代币</string>
    <string name="tip29">备份提示</string>
    <string name="tip30">私钥/助记词/Keystore的安全意味着你的资产安全，建议将内容抄写备份在纸上并妥善管理，避免卸载APP后资产丢失。</string>
    <string name="t_back_up_pk">备份私钥</string>
    <string name="t_back_up_key">备份Keystore</string>
    <string name="tip31">私钥二维码</string>
    <string name="tip32">Keystore二维码</string>
    <string name="t_fee">手续费</string>
    <string name="t_available_balance">可用余额</string>
    <string name="tip33">请输入转账金额</string>
    <string name="tip34">收款人地址</string>
    <string name="tip35">数量</string>
    <string name="tip36">请输入数量</string>
    <string name="tip37">地址</string>
    <string name="tip38">请输入以太坊地址</string>
    <string name="tip40">矿工费用</string>
    <string name="t_send">发送</string>
    <string name="tip41">(未激活)</string>
    <string name="tip42">挖矿总收益(AOC)</string>
    <string name="tip43">我的算力占比</string>
    <string name="tip44">全网总算力值</string>
    <string name="tip45">暂无公告</string>
    <string name="t_my_power">我的总算力: %1$s</string>
    <string name="tip46">共振池</string>
    <string name="tip47">剩余</string>
    <string name="tip48">成本</string>
    <string name="tip49">额度</string>
    <string name="tip50">区块高度</string>
    <string name="tip51">今日产币量</string>
    <string name="tip52">基础算力值</string>
    <string name="tip53">工时算力值</string>
    <string name="tip54">分享算力值</string>
    <string name="tip55">暂无记录</string>
    <string name="tip56">分享体系</string>
    <string name="tip57">暂无数据</string>
    <string name="tip58">收益详情</string>
    <string name="tip59">基础算力值</string>
    <string name="tip60">工时算力值</string>
    <string name="tip61">分享算力值</string>
    <string name="tip62">基础算力记录</string>
    <string name="tip63">算力生效量</string>
    <string name="tip64">算力变动</string>
    <string name="tip65">我的工时: %1$d天</string>
    <string name="tip66">工时算力记录</string>
    <string name="tip67">工时天数</string>
    <string name="tip68">工时算力率</string>
    <string name="tip69">分享地址数量</string>
    <string name="tip70">有效地址数量</string>
    <string name="tip71">体系层级代数</string>
    <string name="tip73">体系辐射代数</string>
    <string name="tip74">矿池基础算力</string>
    <string name="tip75">算力详情</string>
    <string name="tip72">最小兑换额度 1</string>
    <string name="tip76">闪电兑换</string>
    <string name="tip77">闪兑</string>
    <string name="tip78">入金支付</string>
    <string name="tip79">支付账号</string>
    <string name="tip80">请输入支付密码</string>
    <string name="tip81">确认支付</string>
    <string name="tip82">确认付款</string>
    <string name="tip83">选择账号</string>
    <string name="tip85">支付账号</string>
    <string name="tip86">充值数量</string>
    <string name="tip87">兑换数量</string>
    <string name="tip88">闪兑记录</string>
    <string name="tip89">我的</string>
    <string name="tip90">安全设置</string>
    <string name="tup91">地址簿</string>
    <string name="tip92">分享好友</string>
    <string name="tip93">帮助中心</string>
    <string name="tip94">系统设置</string>
    <string name="tip95">关于我们</string>
    <string name="tip97">请输入地址</string>
    <string name="tip98">请输入备注</string>
    <string name="sure">确认</string>
    <string name="tip99">新建地址簿</string>
    <string name="tip100">请输入地址！</string>
    <string name="tip101">请输入备注</string>
    <string name="tup102">您的通讯录已有此联系人！</string>
    <string name="tip103">保存成功！</string>
    <string name="tip104">名称</string>
    <string name="tip105">删除</string>
    <string name="tip106">地址详情</string>
    <string name="tip102">保存成功</string>
    <string name="tip107">是否要删除此联系人？</string>
    <string name="tip108">删除成功</string>
    <string name="tip109">修改PIN码</string>
    <string name="tip110">重置钱包</string>
    <string name="tip111">免密支付</string>
    <string name="tip112">请输入当前PIN密码</string>
    <string name="tip113">请输入新PIN密码</string>
    <string name="tip114">请重复输入新PIN密码</string>
    <string name="tip115">确认修改</string>
    <string name="tip116">修改PIN码</string>
    <string name="tip117">开启后可通过验证系统指纹快速完成支付</string>
    <string name="tip118">立即开通</string>
    <string name="tip119">"当前PIN密码不正确"</string>
    <string name="tip120">两次PIN密码输入不一致</string>
    <string name="tip121">修改成功！</string>
    <string name="tip122">Apollo的触控ID</string>
    <string name="tip123">请按下指纹</string>
    <string name="tip124">取消</string>
    <string name="tip125">重置密码会将所有的钱包账户删除，请先确认账户秘钥都已备份，以防丢失。</string>
    <string name="tip126">重置警告</string>
    <string name="tip127">请务必仔细阅读以下文字</string>
    <string name="tip128">温馨提示</string>
    <string name="tip129">由于交易密码高度私密性，一旦丢失将无法找回，只能删除您当前所有的账号，重新导入私钥设置交易密码即可，重置密码前请务必备份好您的私钥。</string>
    <string name="tip130">确认已认真阅读，完成阅读并熟知重置风险\n请打开右侧按钮，重置所造成的风险自己承担。</string>
    <string name="tip131">确认重置</string>
    <string name="tip132">版本</string>
    <string name="tip133">问题反馈</string>
    <string name="tip134">语言设置</string>
    <string name="tip135">语言</string>
    <string name="t_set_pin">设置PIN码</string>
    <string name="tip136">输入PIN码(6-12位字母或数字)</string>
    <string name="tip137">再次输入</string>
    <string name="user_know">"我已经仔细阅读并同意"</string>
    <string name="user_need_know">"《服务隐私条款》"</string>
    <string name="tip138">Apollo钱包</string>
    <string name="tip139">链上转账，链上挖矿</string>
    <string name="tip140">您当前输入的密码错误，请核对后再次输入</string>
    <string name="tip141">助记顺序不正确</string>
    <string name="tip142">PIN码最少为6位</string>
    <string name="tip143">免密支付介绍\n\n免密支付将你的钱包密码通过安全加密算法存储至手机设备中，交易时调用生物识别（指纹）鉴权，快速完成支付与签名。\n\n开启免密支付后，请妥善备份密码。如果忘记密码，可以通过导入助记词/私钥，重新设置密码。\n\n风险提示\n\n请了解你的手机设备生物识别的安全等级\n大额资产，请勿开启免密支付\n公共手机，请勿开启免密支付\n\n免责说明\n\n手机厂商的生物识别技术安全等级各有差异，我们提醒用户谨慎使用该便捷功能。使用过程出现任何生物识别技术漏洞引发的资产等下，本软件不承担任何责任。</string>
    <string name="tip144">转账失败</string>
    <string name="tip145">转账完成</string>
    <string name="tip146">转账取消</string>
    <string name="tip147">交易成功</string>
    <string name="tip148">交易打包中</string>
    <string name="tip149">私钥不正确</string>
    <string name="tip150">请输入账号地址</string>
    <string name="tip151">钱包已存在</string>
    <string name="tip152">钱包不存在</string>
    <string name="tip153">余额不足</string>
    <string name="price_info_detail">Get latest trade info from %1$s.\n         price of 24h before:%2$s.\n         price of now:%3$s. \n         highest price:%4$s.\n         lowest price:%5$s.\n         amount:%6$s.\n         volumn:%7$s.</string>
    <string name="account_balance_info">Balance of %1$s:%2$f\n         Details:\n             liquid eos:%3$f\n             ram:%4$d Byte\n             cpu:%5$f\n             net:%6$f\n             total eos:%7$f\n             price:%8$f</string>
    <string name="tip154">请输入密码</string>
    <string name="biometricprompt_tip">提&#160;示</string>
    <string name="biometricprompt_fingerprint_verification">指纹验证</string>
    <string name="biometricprompt_verify_fingerprint">请验证您的指纹</string>
    <string name="biometricprompt_verify_usepwd">密码验证</string>
    <string name="biometricprompt_verify_success">验证成功</string>
    <string name="biometricprompt_verify_failed">验证失败</string>
    <string name="biometricprompt_verify_error_no_hardware">此设备不支持指纹识别</string>
    <string name="biometricprompt_cancel">取&#160;消</string>
    <string name="fingerprint_recognition">指纹识别</string>
    <string name="fingerprint_cancel">取消指纹识别</string>
    <string name="fingerprint_usepwd">密码验证</string>
    <string name="biometricprompt_finger_add">请先添加指纹</string>
    <string name="biometricprompt_finger_add_confirm">确认添加</string>
    <string name="close_finger">关闭指纹支付</string>
    <string name="tip158">账号地址</string>
    <string name="tip165">区块高度</string>
    <string name="tip166">交易Hash</string>
    <string name="tip227">激活矿机需要消耗8个</string>
    <string name="tip228">确定</string>
</resources>