<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_create_apl" />

    <include layout="@layout/include_head_normal" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/tip138"
        android:textColor="@color/gray4"
        android:textSize="81px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_30px"
        android:text="@string/tip139"
        android:textColor="@color/gray4"
        android:textSize="@dimen/dimen_35px" />

    <com.flyco.roundview.RoundTextView
        android:id="@+id/btn_import"
        android:layout_width="690px"
        android:layout_height="@dimen/dimen_130px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="170px"
        android:gravity="center"
        android:text="@string/insert_account"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_42px"
        app:rv_backgroundColor="@color/gray5"
        app:rv_cornerRadius="14px" />

    <com.flyco.roundview.RoundTextView
        android:id="@+id/btn_create"
        android:layout_width="690px"
        android:layout_height="@dimen/dimen_130px"
        android:layout_above="@id/btn_import"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="58px"
        android:gravity="center"
        android:text="@string/create_address"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_42px"
        app:rv_backgroundColor="@color/color_copy"
        app:rv_cornerRadius="14px" />
</RelativeLayout>