<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="550px"
    android:layout_gravity="center"
    android:background="@drawable/radius_22_purple2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_88px"
        android:layout_marginBottom="@dimen/dimen_52px"
        android:gravity="center"
        android:text="@string/tip227"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_52px" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_120px"
        android:layout_marginLeft="@dimen/dimen_64px"
        android:layout_marginRight="@dimen/dimen_64px"
        android:background="@drawable/radius_14_white"
        android:hint="@string/tip154"
        android:inputType="textPassword"
        android:paddingRight="@dimen/dimen_36px"
        android:maxLines="1"
        android:paddingLeft="@dimen/dimen_36px"
        android:singleLine="true"
        android:textColor="@color/color_purple"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/dimen_36px" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dimen_70px"
        android:background="#53448F" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tip124"
            android:textColor="#3A2B74"
            android:textSize="@dimen/dimen_52px" />

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tip228"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_52px" />
    </LinearLayout>

</LinearLayout>