<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_create_eth_one">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_60px"
            android:layout_marginTop="50dp"
            android:onClick="back"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="MissingConstraints"></ImageView>


        <TextView
            android:id="@+id/tv_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_head"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="118px"
            android:text="@string/tip9"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_52px"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_create"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_130px"
            android:layout_below="@id/tv_txt1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dimen_150px"
            android:layout_marginTop="118px"
            android:layout_marginRight="@dimen/dimen_150px"
            android:background="@drawable/radius_14_green1"
            android:gravity="center"
            android:text="@string/t_create_new_card"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_46px" />

        <TextView
            android:id="@+id/tv_tip1"
            android:layout_width="772px"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_create"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_24px"
            android:text="@string/tip10"
            android:textColor="@color/gray4"
            android:textSize="@dimen/dimen_35px" />

        <TextView
            android:id="@+id/tv_import"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_130px"
            android:layout_below="@id/tv_tip1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dimen_150px"
            android:layout_marginTop="75px"
            android:layout_marginRight="@dimen/dimen_150px"
            android:background="@drawable/radius_14_gray"
            android:gravity="center"
            android:text="@string/eth_import_way"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_46px" />

        <TextView
            android:layout_width="772px"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_import"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_32px"
            android:text="@string/tip11"
            android:textColor="@color/gray4"
            android:textSize="@dimen/dimen_35px" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>