<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_22_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/biometricprompt_color_ffffff"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFingerprint"
            android:layout_width="230px"
            android:layout_height="236px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="92px"
            app:srcCompat="@drawable/ic_fingerprint_dialog" />

        <TextView
            android:id="@+id/tvTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="71px"
            android:text="@string/tip122"
            android:textColor="@color/color_page_main"
            android:textSize="@dimen/dimen_52px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_32px"
            android:text="@string/tip123"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_35px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dimen_60px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tip124"
                android:textColor="@color/color_page_main"
                android:textSize="@dimen/dimen_52px" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>